--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5001
 CONNECTION_STRING = mongodb+srv://admin:admin@cluster0.jzkk9sl.mongodb.net/mycontacts-backend?retryWrites=true&w=majority&appName=Cluster0
+ACCESS_TOKEN_SECRET=access123
